--- a/static/index.html
+++ b/static/index.html
@@ -35,7 +35,7 @@
 				<p>Waiting in Line</p>
 			</a>
 		</div>
-		<div id="project2">
+		<div class="project" id="project2">
 			<a href="project.html">
 				<img src="images/lorempixel.city.1.jpeg" alt="Lorem Pixel image">
 				<p>Needfinding</p>
